--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css">
     <script src="https://kit.fontawesome.com/14111279f9.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="style.css">
     <title>Gary Llil</title>
   </head>
   <body>
